--- a/00_jQuey_css.html
+++ b/00_jQuey_css.html
@@ -28,26 +28,34 @@
 
 
     <div id="content">즐거운 jQuery !!!</div>
-<script>
-    //1.
-    $(document).ready(function () {
-        $('#changeText').click(function (){
-           $('#content').text('Happy jQuery');
-        });
+    <script>
+        // 1. 제이쿼리로 도큐먼트 준비된 기능 작성
+        $(document).ready(function (){
 
-        $('#toggleText').click(function (){
-           $('#content').toggle(500); // 초단위 부드럽게
-        });
+            // 2. 텍스트변경을 클릭했을 때
+            $('#changeText').click(function (){
+                $('#content').text('Happy JQUERY');  //  즐거운 jQuery !!!  -> Happy JQUERY 로 변경
+            });
 
-        $('#addColorText').click(function (){
-            $('#content').append('<p class="new-text">새롭게 추가된 컬러 텍스트 입니다.</p>');
-        });
+            // 3. 텍스트 보이기/ 숨기기
+            $('#toggleText').click(function (){
+                $('#content').toggle(300); // 초 단위를 넣어 부드럽게 숨기거나 보이게 설정
+            })
 
-        $('#changeColorText').click(function (){
-            $('#content').css('color','red');
-        });
-    })
+            // 4. new-text를 이용해서 컬러텍스트 추가
+            $('#addColorText').click(function (){
+                $('#content').append('<p class="new-text"> 새롭게 추가된 컬러 텍스트 입니다. </p>');
+            });
+            // 버튼 명칭 addColorText    <p> 새롭게 추가된 컬러 텍스트 입니다. </p>
 
-</script>
+            //5. .css() 로 제 2순위 스타일 설정
+            $('#changeColorText').click(function () {
+                //<style> 태그안에 작성한 순위보다 .css() 작성한 순위가 더 높기 때문에 더 높은 순위의 css 적용
+                //  <div id="content" style="color: red;">즐거운 jQuery !!!</div> 로 설정
+                $('#content').css('color', 'red');
+            });
+
+        });
+    </script>
 </body>
 </html>
